--- a/index.html
+++ b/index.html
@@ -4,59 +4,12 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="./CSS/styles.css" />
     <title>counter project</title>
-
-    <style>
-      * {
-        margin: 0;
-        padding: 0;
-        box-sizing: border-box;
-      }
-
-      body {
-        font-family: sans-serif;
-      }
-
-      section {
-        height: 100vh;
-        width: 100%;
-        background: linear-gradient(to right, #f2ffcc 0%, #ace600);
-        display: flex;
-        justify-content: center;
-        align-items: center;
-      }
-
-      div {
-        display: flex;
-        background: rgb(38, 38, 38, 0.1);
-        padding: 0.67rem 1rem;
-        align-items: center;
-        border-radius: 30px;
-      }
-
-      p {
-        font-size: 3rem;
-        color: #fff;
-        padding: 0.5rem;
-        font-weight: lighter;
-        margin: 0 0.5rem;
-      }
-
-      .num {
-        background: #3b3b3b;
-        border-radius: 50%;
-        height: 80px;
-        width: 80px;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        margin-top: 0 1rem;
-        font-size: 3rem;
-      }
-    </style>
   </head>
   <body>
     <section>
+      <h2 style="color: #739900; margin-bottom: 5rem">Start Counting</h2>
       <div>
         <p class="sub">-</p>
         <p class="num">0</p>
